fixed text visibility issue

--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,9 @@ h1, h2, h3, h4, h5, h6, .h01, .h02, .h03, .h04, .h05, .h06 {
 	text-rendering: optimizeLegibility;
 	margin-bottom: 2.1rem;
 }
+.about > h3 {
+	color: #FFFF;
+}
 h3, .h03, h4, .h04 {
 	margin-bottom: 1.8rem;
 }
@@ -1036,7 +1039,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 .section-intro h1 {
 	font-family: "poppins-semibold", serif;
 	font-size: 3.6rem;
-	color: #313131;
+	color: #FFFF;
 	line-height: 1.25;
 	margin-bottom: 1.2rem;
 }
@@ -2328,7 +2331,7 @@ header .logo a {
 #contact input[type="email"],
 #contact textarea {
 	width: 100%;
-	color: rgba(255, 255, 255, 0.7);
+	color: rgba(255, 255, 255, 0.9);
 	margin-bottom: 0;
 	border: none;
 	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
